Disabling dry-run

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -98,8 +98,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           access: public
-          # Defaulting to true - enable this on a new package
-          dry-run: true
+          dry-run: false
           token: ${{ secrets.NPM_PUBLISH_ACCESS_TOKEN }}
       - if: steps.publish.outputs.type != 'none'
         run: |
