--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "29.4.0",
     "@types/lodash": "4.14.194",
     "@types/node": "18.15.11",
+    "@types/validator": "13.6.3",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
     "concurrently": "8.0.1",
@@ -51,6 +52,7 @@
   "dependencies": {
     "lodash": "4.17.21",
     "mongoose": "6.9.0",
+    "validator": "13.6.0",
     "yup": "0.32.9"
   },
   "repository": "git@github.com:tofu-apis/node-lib_template.git",
