--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,30 +1,13 @@
 # Basic workflow for Github Actions
-name: CI
+name: CD
 
 # Triggers the workflow on push or pull request events but only for the main branch
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Execution of all pre-commit checks/tests for the remote repository
-  tests:
-    name: Run build & tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get current docker(-compose) versions
-        run: docker --version && docker-compose --version
-      - name: Run build
-        run: make dckr-build
-      - name: Run lint
-        run: make dckr-build-linter
-      - name: Run the unit tests
-        run: make dckr-build-test-unit
-
   # Revert commit (only should run on failure of some phase in a CI/CD pipeline)
   auto-revert-commit:
     needs: tests
