--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,12 +1,7 @@
-# Basic workflow for Github Actions
-name: CI
+name: tests
 
-# Triggers the workflow on push or pull request events but only for the main branch
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_call:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
